Add ProjectGroupEditEndpoint
