# Api/Endpoints/Entity/EntityPermissionsEditEndpoint.cs
@@ -54,7 +54,7 @@ public class EntityPermissionsEditEndpoint : EndpointBaseAsync
         }
 
         var accountPermissions = dto.AccountPermissions ?? ImmutableArray<EntityPermissionsAccountEditDto>.Empty;
-        if (accountPermissions.Any(a => string.IsNullOrEmpty(a.Id) && string.IsNullOrEmpty(a.EmailAddress)))
+        if (accountPermissions.Any(a => string.IsNullOrEmpty(a.Id?.Value) && string.IsNullOrEmpty(a.EmailAddress)))
         {
             return ValidationProblem(title: "All accounts must be identified by either id or email address.");
         }
